alignment fix

--- a/static/css/game_list.css
+++ b/static/css/game_list.css
@@ -5,11 +5,11 @@
 
 .blue_bar {
   width: 1062px;
-  height: 17px;
+  height: 42px;
   background: rgba(135,255,240,1);
   opacity: 1;
   position: relative;
-  top: -50px;
+  top: 0px;
 }
 
 .bar_name{
@@ -17,7 +17,7 @@
   color: rgba(255,255,255,1);
   position: absolute;
   top: 2px;
-  left: 37px;
+  left: -255px;
   font-family: Roboto;
   font-weight: Regular;
   font-size: 24px;
@@ -35,7 +35,7 @@
 /*~~Video Games Grid~~*/
 .gallery-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 250px); /*minmax(250px, 1fr) for flux*/
+  grid-template-columns: repeat(1, 1fr); /*minmax(250px, 1fr) for flux*/
   grid-gap: 0.5rem;
   justify-items: end;
   margin: 0;
